hydroflow/tests/compile-fail/surface_port_unused_both_indirect.stderr
error: Output port index is unused. (Is the port on the correct side?)
 --> tests/compile-fail/surface_port_unused_both_indirect.rs:8:21
  |
8 |         dst_0 = dst[0];
  |                     ^

error: Input port index is unused. (Is the port on the correct side?)
 --> tests/compile-fail/surface_port_unused_both_indirect.rs:7:18
  |
7 |         src_0 = [0]src;
  |                  ^
